manifest/media/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sonarr.defconsandbox.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:  
            name: sonarr-service
            port:
              number: 80
